[package]
name = "pollster-macro"
version = "0.1.0"
description = "Proc-macro crate for pollster"
categories = ["asynchronous", "concurrency"]
keywords = ["async", "minimal", "executor", "runtime", "block_on"]
repository = "https://github.com/zesterer/pollster"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"

[lib]
proc-macro = true
