[package]
name = "pollster-macro"
version = "0.1.0"
description = "Proc-macro crate for pollster"
categories = ["asynchronous", "concurrency"]
keywords = ["async", "minimal", "executor", "runtime", "block_on"]
repository = "https://github.com/zesterer/pollster"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false, features = [
    "full",
    "parsing",
    "printing",
] }

[dev-dependencies]
pollster = { path = "..", features = ["macro"] }

[package.metadata.docs.rs]
targets = []
